try safari flicker fix back to 22

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,19 +11,19 @@
 
 @keyframes slideInFromLeft {
   0% {
-    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
   }
   100% {
-    transform: translateX(-01);
+    -webkit-transform: translateX(-01);
   }
 }
 
 @keyframes slideInFromtop {
   0% {
-    transform: translatey(-100%);
+    -webkit-transform: translatey(-100%);
   }
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
   }
 }
 
@@ -33,8 +33,6 @@ body {
   margin: 0;
   padding: 0;
   background-image: url(wallpaper.jpg);
-  -webkit-transform:translate3d(0,0,0);
-
 }
 
 body::-webkit-scrollbar {
@@ -60,7 +58,7 @@ hr {
 }
 
 hr:hover {
-  transition: 600ms linear;
+  -webkit-transition: 600ms linear;
   width: 50%
 }
 
@@ -71,8 +69,8 @@ a {
 
 
 .scale {
-    transform: scale(1.1);
-    transition: var(--transition-speed);
+    -webkit-transform: scale(1.1);
+    -webkit-transition: var(--transition-speed);
 }
 /***** color and transition speed *****/
 
@@ -87,7 +85,7 @@ a {
 /*transitions*/
 .fa-primary,
 .fa-secondary {
-  transition: var(--transition-speed);
+  -webkit-transition: var(--transition-speed);
 }
 
 /***** id, so first nav-link wont be grayscaled i know its a lame overwrite *****/
@@ -103,7 +101,7 @@ a {
   animation: 0.4s ease-out 0s 1 slideInFromLeft;
   position: fixed;
   background-color: var(--bg-primary);
-  transition: width 600ms ease;
+  -webkit-transition: width 600ms ease;
   overflow: scroll;
   top: 0;
   height: 100vh;
@@ -130,7 +128,7 @@ a {
   color: var(--text-primary);
   text-decoration: none;
   filter: grayscale(100%) opacity(0.7);
-  transition: var(--transition-speed);
+  -webkit-transition: var(--transition-speed);
 }
 
 .nav-link:hover {
@@ -151,15 +149,15 @@ a {
 }
 
 .logo svg {
-  transform: rotate(0deg);
-  transition: var(--transition-speed);
+  -webkit-transform: rotate(0deg);
+  -webkit-transition: var(--transition-speed);
 }
 
 .logo-text {
   display: inline;
   position: absolute;
   left: -999px;
-  transition: var(--transition-speed);
+  -webkit-transition: var(--transition-speed);
 }
 
 
@@ -240,13 +238,13 @@ a {
 }
 
 .button:focus svg {
-  transform: rotate(+360deg);
-  transition-duration: 900ms;
+  -webkit-transform: rotate(+360deg);
+  -webkit-transition-duration: 900ms;
 }
 
 .nav-link svg {
-  transform: rotate(+360deg);
-  transition-duration: 500ms;
+  -webkit-transform: rotate(+360deg);
+  -webkit-transition-duration: 500ms;
 }
 
 .svg-sizing {
@@ -393,7 +391,7 @@ select.form{
   }
 
   .expand-nav .logo svg {
-    transform: rotate(-280deg);
+    -webkit-transform: rotate(-280deg);
     margin-left: 7.5rem;
   }
 
@@ -453,7 +451,7 @@ p {
     }
 
     .navbar:hover .logo svg {
-        transform: rotate(-280deg);
+        -webkit-transform: rotate(-280deg);
         margin-left: 10rem;
       }
 
@@ -471,7 +469,7 @@ p {
     }
 
     .expand-nav .logo svg {
-      transform: rotate(-280deg);
+      -webkit-transform: rotate(-280deg);
       margin-left: 10rem;
     }
 
